# compta

./: .gitignore  CHANGES  LICENSE  Makefile.am  compta_config.h.tmp.in  configure.ac  readme.md
docs/: index.html
doxygen/: Makefile.am  aminclude.am  compta.dox.in  compta.page
doxygen/txt_common/: acknowledgment.page
example/: Longjumeau_data
m4/: config_summary.m4
m4/common/: config_environment.m4  git_config.m4
model_doc/: .gitignore  Makefile  input_file.tex  input_forecast.tex  intro.tex  main.tex  object.tex  preambule.tex
model_doc/rawfigs/src/: entite.tex  forecast.tex
share/aclocal/: compta.m4
src/: .gitignore  Makefile.am
src/accounts/include/compta/: account_base.hpp  bank.hpp  cash.hpp  compta_obj.hpp  history.hpp  posting.hpp  posting_enum.hpp  savings.hpp
src/accounts/src/: account_base.cpp  bank.cpp  cash.cpp  compta_obj.cpp  history.cpp  posting.cpp
src/apps/: main.cpp  version.cpp
src/date/include/compta/: date.hpp
src/date/src/: date.cpp
src/forecast/include/compta/: forecast.hpp  forecast_container.hpp  operation.hpp
src/forecast/src/: forecast.cpp  operation.cpp
src/money/include/compta/: money.hpp  money_enum.hpp
src/money/src/: money.cpp
src/options/include/compta/: compta_options.hpp  options_enum.hpp
src/options/src/: compta_options.cpp
src/parsing/include/compta/: parsing_def.hpp  read_compta_input_file.hpp
src/parsing/src/: parsing_def.cpp  read_compta_input_file.cpp
src/report/include/compta/: category_report.hpp  monthly_report.hpp
src/report/src/: category_report.cpp  monthly_report.cpp
src/tex/include/compta/: latex_factory.hpp
src/tex/src/: latex_factory.cpp
src/utilities/include/compta/: compta_asserts.hpp  compta_exceptions.hpp  compta_help.hpp  compta_version.hpp.in  date_utils.hpp  static_error_variables.hpp  string_utils.hpp
src/utilities/src/: compta_help.cpp  compta_version.cpp  date_utils.cpp  static_error_variables.cpp  string_utils.cpp
test/: .gitignore  Makefile.am  Makefile.in  account_base_unit.cpp  bank_unit.cpp  cash_unit.cpp  category_report_unit.cpp  compta_fail.sh.in  compta_files.sh.in  compta_options.cpp  compta_options.sh.in  compta_version.sh.in  date_unit.cpp  files_name.cpp  forecast_container_unit.cpp  forecast_unit.cpp  history_unit.cpp  operation_unit.cpp  posting_unit.cpp  savings_unit.cpp
test/input/: Austin_data_1.5  Longjumeau_data  Longjumeau_data_1.5
