BUILT_SOURCES   = .license.stamp

#----------------------------------------
# Programs and libraries we want to build
#----------------------------------------

bin_PROGRAMS    = compta 
bin_PROGRAMS   += compta_version


#----------------------------
# INCLUDES we want distributed
#----------------------------
pkginclude_HEADERS  =

# date
pkginclude_HEADERS += date/include/compta/date.hpp
# money
pkginclude_HEADERS += money/include/compta/money.hpp
pkginclude_HEADERS += money/include/compta/money_enum.hpp
# forecast
pkginclude_HEADERS += forecast/include/compta/operation.hpp
pkginclude_HEADERS += forecast/include/compta/forecast_container.hpp
pkginclude_HEADERS += forecast/include/compta/forecast.hpp
# utilities
pkginclude_HEADERS += utilities/include/compta/compta_exceptions.hpp
pkginclude_HEADERS += utilities/include/compta/compta_asserts.hpp
pkginclude_HEADERS += utilities/include/compta/date_utils.hpp
pkginclude_HEADERS += utilities/include/compta/string_utils.hpp
# accounts
pkginclude_HEADERS += accounts/include/compta/posting.hpp
pkginclude_HEADERS += accounts/include/compta/posting_enum.hpp
pkginclude_HEADERS += accounts/include/compta/history.hpp
pkginclude_HEADERS += accounts/include/compta/account_base.hpp
pkginclude_HEADERS += accounts/include/compta/cash.hpp
pkginclude_HEADERS += accounts/include/compta/savings.hpp
pkginclude_HEADERS += accounts/include/compta/bank.hpp
pkginclude_HEADERS += accounts/include/compta/compta_obj.hpp
#latex
pkginclude_HEADERS += tex/include/compta/latex_factory.hpp


# Needs to be builddir since this is generated by configure
pkginclude_HEADERS += $(top_builddir)/src/utilities/include/compta/compta_version.hpp

# Prog app
compta_version_SOURCES = apps/version.cpp
compta_SOURCES = apps/main.cpp

#--------------------------------------
#Local Directories to include for build
#--------------------------------------
AM_CPPFLAGS  =
AM_CPPFLAGS += -I$(top_srcdir)/src/date/include
AM_CPPFLAGS += -I$(top_srcdir)/src/money/include
AM_CPPFLAGS += -I$(top_srcdir)/src/forecast/include
AM_CPPFLAGS += -I$(top_srcdir)/src/accounts/include
AM_CPPFLAGS += -I$(top_srcdir)/src/stock/include
AM_CPPFLAGS += -I$(top_srcdir)/src/utilities/include
AM_CPPFLAGS += -I$(top_srcdir)/src/parsing/include
AM_CPPFLAGS += -I$(top_srcdir)/src/tex/include
AM_CPPFLAGS += -I$(top_builddir)/src/utilities/include #compta_version.h
AM_CPPFLAGS +=  $(compta_optional_INCLUDES)

CLEANFILES =

#--------------
# Code coverage
#--------------
if CODE_COVERAGE_ENABLED
  CLEANFILES += *.gcda *.gcno
endif

#---------------------------------
# Embedded license header support
#---------------------------------
STAMPED_FILES = $(pkginclude_HEADERS) $(compta_version_SOURCES) $(compta_SOURCES)

.license.stamp: $(top_srcdir)/LICENSE
	$(top_srcdir)/src/common/lic_utils/update_license.pl -S=$(top_srcdir)/src $(top_srcdir)/LICENSE $(STAMPED_FILES) 
	echo 'updated source license headers' >$@

CLEANFILES += .license.stamp

EXTRA_DIST = common

