#----------------------------------------
# Programs and libraries we want to build
#----------------------------------------

lib_LTLIBRARIES = libcompta.la

bin_PROGRAMS    = compta 
bin_PROGRAMS   += compta_version

#----------------------------
# SOURCES we want distributed
#----------------------------
libcompta_la_SOURCES = 

#accounts
libcompta_la_SOURCES += accounts/src/account_base.cpp

#----------------------------
# INCLUDES we want distributed
#----------------------------
pkginclude_HEADERS  =

# date
pkginclude_HEADERS += date/include/compta/date.hpp
# money
pkginclude_HEADERS += money/include/compta/money.hpp
pkginclude_HEADERS += money/include/compta/money_enum.hpp
# forecast
pkginclude_HEADERS += forecast/include/compta/operation.hpp
pkginclude_HEADERS += forecast/include/compta/forecast_container.hpp
pkginclude_HEADERS += forecast/include/compta/forecast.hpp
# utilities
pkginclude_HEADERS += utilities/include/compta/compta_exceptions.hpp
pkginclude_HEADERS += utilities/include/compta/compta_asserts.hpp
pkginclude_HEADERS += utilities/include/compta/static_error_variables.hpp
pkginclude_HEADERS += utilities/include/compta/date_utils.hpp
pkginclude_HEADERS += utilities/include/compta/string_utils.hpp
# accounts
pkginclude_HEADERS += accounts/include/compta/posting.hpp
pkginclude_HEADERS += accounts/include/compta/posting_enum.hpp
pkginclude_HEADERS += accounts/include/compta/history.hpp
pkginclude_HEADERS += accounts/include/compta/account_base.hpp
pkginclude_HEADERS += accounts/include/compta/cash.hpp
pkginclude_HEADERS += accounts/include/compta/savings.hpp
pkginclude_HEADERS += accounts/include/compta/bank.hpp
pkginclude_HEADERS += accounts/include/compta/compta_obj.hpp
# month reports
pkginclude_HEADERS += report/include/compta/monthly_report.hpp
pkginclude_HEADERS += report/include/compta/category_report.hpp
#latex
pkginclude_HEADERS += tex/include/compta/latex_factory.hpp


# Needs to be builddir since this is generated by configure
pkginclude_HEADERS += $(top_builddir)/src/utilities/include/compta/compta_version.hpp

# Prog app
compta_version_SOURCES = apps/version.cpp
compta_version_LDADD = libcompta.la

compta_SOURCES = apps/main.cpp
compta_LDADD = libcompta.la

#--------------------------------------
#Local Directories to include for build
#--------------------------------------
AM_CPPFLAGS  =
AM_CPPFLAGS += -I$(top_srcdir)/src/date/include
AM_CPPFLAGS += -I$(top_srcdir)/src/money/include
AM_CPPFLAGS += -I$(top_srcdir)/src/forecast/include
AM_CPPFLAGS += -I$(top_srcdir)/src/accounts/include
AM_CPPFLAGS += -I$(top_srcdir)/src/stock/include
AM_CPPFLAGS += -I$(top_srcdir)/src/utilities/include
AM_CPPFLAGS += -I$(top_srcdir)/src/parsing/include
AM_CPPFLAGS += -I$(top_srcdir)/src/report/include
AM_CPPFLAGS += -I$(top_srcdir)/src/tex/include
AM_CPPFLAGS += -I$(top_builddir)/src/utilities/include #compta_version.h

CLEANFILES = 

#--------------
# Code coverage
#--------------
if CODE_COVERAGE_ENABLED
  CLEANFILES += *.gcda *.gcno
endif

EXTRA_DIST = common

